[tool.poetry]
name = "mer.api"
version = "0.1.0"
description = ""
authors = ["Aditya W <07311940000001@mahasiswa.integra.its.ac.id>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.8.0"
fastapi = "^0.75.1"
streamlit = "^1.8.1"
mitoinstaller = "^0.0.132"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
